--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "prod": "parcel build src/index.html -d prod --public-url ./"
+    "prod": "parcel build src/index.html src/switch.html -d prod --public-url https://control-pannel.netlify.app"
   },
   "repository": {
     "type": "git",
